feat: fcm integration and production refactor